// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Progress /> Render must match large() 1`] = `
<div>
  <span
    class="Progress Progress--large"
  >
    <span
      class="Progress-item bg-green"
      style="width: 50%;"
    />
  </span>
</div>
`;

exports[`<Progress /> Render must match normal() 1`] = `
<div>
  <span
    class="Progress"
  >
    <span
      class="Progress-item bg-green"
      style="width: 50%;"
    />
  </span>
</div>
`;

exports[`<Progress /> Render must match small() 1`] = `
<div>
  <span
    class="Progress Progress--small"
  >
    <span
      class="Progress-item bg-green"
      style="width: 50%;"
    />
  </span>
</div>
`;
